fix: Fixed toml description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "parsebin"
 version = "0.1.0"
 edition = "2021"
 authors = ["Daniel <animcuil@gmail.com>"]
-description = "A LSP implementation for EBNF."
+description = "An very simple tool to parse binary data and print primitive values to standard out."
 readme = "README.md"
 repository = "https://github.com/DanielHauge/parsebin"
 license = "Apache-2.0"
